resources/testcases_static_checks/tests/positive/isWeaklySticky/projection.rls
../../../tests_common_data/rule-classification-examples/projection.rls