resources/testcases_static_checks/tests/negative/isJointlyAcyclic/f28.rls
../../../tests_common_data/rule-classification-examples/f28.rls